...
                }
                
                Spacer()
                
                // Simple Add Button
                simpleAddButton
                    .accessibilityIdentifier("AddRecordButton")
            }
        }
        .padding(.horizontal, 20)        // .padding(.top, 20)
        .accessibilityElement(children: .contain)
        .accessibilityIdentifier("InputView")
        .animation(.easeInOut(duration: 0.3), value: foodDescription.isEmpty)
...
